--- a/apply.html
+++ b/apply.html
@@ -16,7 +16,8 @@
     <script src="js/ui-bootstrap-tpls-0.10.0.js" type="text/javascript"></script>
     <style type="text/css">
     .contentarea {
-        width: 70%;
+        width: 65%;
+        min-width: 800px;
         /*height: 500px;*/
         margin: 0 auto;
         padding: 1%;
@@ -50,7 +51,7 @@
                 <li><a href="photo.html">摄像</a></li>
                 <li><a href="it.html">IT</a></li>
                 <li><a href="caibird.html">菜鸟课堂</a></li>
-                <li class="active"><a href="apply.html">项目申请</a></li>
+                <li><a href="apply.html" class="active">项目申请</a></li>
                 <li><a href="oldbird.html">老鸟客厅</a></li>
                 <li><a href="aboutus.html">加入我们</a></li>
                 <!-- </div> -->
@@ -62,10 +63,10 @@
     <div class="row page">
         <div class="contentarea">
         <div class="row imgbar">
-            <img src="img/step1.png" alt="" class="col-sm-offset-1 col-md-offset-1 col-lg-offset-1 col-sm-2 col-md-2 col-lg-2">
-            <img src="img/step2.png" alt="" class="col-sm-2 col-md-2 col-lg-2">
-            <img src="img/step3.png" alt="" class="col-sm-2 col-md-2 col-lg-2">
-            <img src="img/step4.png" alt="" class="col-sm-2 col-md-2 col-lg-2">
+            <img src="img/step1.png" alt="" class="col-sx-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 col-xs-2 col-sm-2 col-md-2 col-lg-2 img-responsive">
+            <img src="img/step2.png" alt="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 img-responsive">
+            <img src="img/step3.png" alt="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 img-responsive">
+            <img src="img/step4.png" alt="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 img-responsive">
         </div>
         </div>
     </div>
