--- a/design.html
+++ b/design.html
@@ -189,7 +189,7 @@
                 <li><a href="photo.html">摄像</a></li>
                 <li><a href="it.html">IT</a></li>
                 <li><a href="caibird.html">菜鸟课堂</a></li>
-                <li><a href="#">项目申请</a></li>
+                <li><a href="apply.html">项目申请</a></li>
                 <li><a href="oldbird.html">老鸟客厅</a></li>
                 <li><a href="aboutus.html">加入我们</a></li>
         </nav>
