--- a/photo.html
+++ b/photo.html
@@ -190,8 +190,8 @@
         <nav class="navbar navhome">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">首页</a></li>
-                <li class="active"><a href="design.html">设计</a></li>
-                <li><a href="photo.html">摄像</a></li>
+                <li><a href="design.html">设计</a></li>
+                <li><a href="photo.html" class="active">摄像</a></li>
                 <li><a href="it.html">IT</a></li>
                 <li><a href="caibird.html">菜鸟课堂</a></li>
                 <li><a href="#">项目申请</a></li>
