--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" type="text/css" href="css/indexcss.css">
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" language="JavaScript" src="js/indexjs.js"></script>
+    <style>
+    a {
+        color: grey;
+    }
+    </style>
 </head>
 
 <body>
@@ -27,12 +32,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <!-- <div class="collapse navbar-collapse"> -->
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">首页</a></li>
+                <li><a href="index.html" class="active">首页</a></li>
                 <li><a href="design.html">设计</a></li>
                 <li><a href="photo.html">摄像</a></li>
                 <li><a href="it.html">IT</a></li>
                 <li><a href="caibird.html">菜鸟课堂</a></li>
-                <li><a href="#">项目申请</a></li>
+                <li><a href="apply.html">项目申请</a></li>
                 <li><a href="oldbird.html">老鸟客厅</a></li>
                 <li><a href="aboutus.html">加入我们</a></li>
                 <!-- </div> -->
