--- a/it.html
+++ b/it.html
@@ -99,6 +99,7 @@
         margin-left: 2%;
         margin-right: 2%;
     }
+
     
 
     </style>
@@ -171,6 +172,7 @@
                 } else {
                     $scope.paginationShow = true;
                 };
+
             });
         };
     }]);
@@ -202,7 +204,7 @@
                 <hr/>
                 <div ng-repeat="tag in tagitems">
                     <li>
-                        <h2 ng-click="dipbyTagV(tag.tag)">{{tag.tag}}</h2></li>
+                        <h2 ng-class="active: {{tag.tag==='前端设计'}}" ng-click="dipbyTagV(tag.tag)">{{tag.tag}}</h2></li>
                     <!-- <h2><a ng-click="dipbyTagV()">{{tag.tag}}</a></h2></li> -->
                     <!-- <button ng-click="dipbyTagV()">Test </button> -->
                     <hr/>
