--- a/it.html
+++ b/it.html
@@ -162,6 +162,7 @@
         });
 
         $scope.dipbyTagV = function(name) {
+            $scope.currentId = name;
             // alert("Hello Alice");
             $http.get('http://121.40.113.6/api/GetProjectSet?projectType=IT&tagv=' + name).success(function(data) {
                 $scope.items = data;
@@ -204,7 +205,7 @@
                 <hr/>
                 <div ng-repeat="tag in tagitems">
                     <li>
-                        <h2 ng-class="active: {{tag.tag==='前端设计'}}" ng-click="dipbyTagV(tag.tag)">{{tag.tag}}</h2></li>
+                        <h2 ng-class="active: currentId == {{tag.tag}}" ng-click="dipbyTagV(tag.tag)">{{tag.tag}}</h2></li>
                     <!-- <h2><a ng-click="dipbyTagV()">{{tag.tag}}</a></h2></li> -->
                     <!-- <button ng-click="dipbyTagV()">Test </button> -->
                     <hr/>
