--- a/it.html
+++ b/it.html
@@ -205,7 +205,7 @@
                 <hr/>
                 <div ng-repeat="tag in tagitems">
                     <li>
-                        <h2 ng-class="active: currentId == {{tag.tag}}" ng-click="dipbyTagV(tag.tag)">{{tag.tag}}</h2></li>
+                        <h2 ng-class="active: currentId == tag.tag" ng-click="dipbyTagV(tag.tag)">{{tag.tag}}</h2></li>
                     <!-- <h2><a ng-click="dipbyTagV()">{{tag.tag}}</a></h2></li> -->
                     <!-- <button ng-click="dipbyTagV()">Test </button> -->
                     <hr/>
