--- a/it.html
+++ b/it.html
@@ -164,7 +164,7 @@
         $scope.dipbyTagV = function(tag) {
          
             // alert("Hello Alice");
-            $http.get('http://121.40.113.6/api/GetProjectSet?projectType=IT&tagv=' + tag.name).success(function(data) {
+            $http.get('http://121.40.113.6/api/GetProjectSet?projectType=IT&tagv=' + tag.tag).success(function(data) {
                 $scope.items = data;
                 $scope.totalItems = $scope.items.length;
                 $scope.noOfPages = Math.ceil($scope.totalItems / $scope.entryLimit);
