--- a/joinus.html
+++ b/joinus.html
@@ -8,12 +8,12 @@
     <title>CaiBird</title>
     <script type="text/javascript" language="JavaScript" src="js/jquery-1.9.1.js">
     </script>
-    <script type="text/javascript" language="JavaScript" src="js/jquery-ui.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css">
     <link rel="stylesheet" type="text/css" href="css/indexcss.css">
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" language="JavaScript" src="js/indexjs.js"></script>
+    <script src="js/angular.min.js"></script>
+    <script src="js/ui-bootstrap-tpls-0.10.0.js" type="text/javascript"></script>
     <style type="text/css">
     .active {
         color: red;
@@ -89,6 +89,32 @@
         font-size: 1.4em
     }
     </style>
+    <script>
+    var app = angular.module('myApp', ['ui.bootstrap']);
+
+
+    app.controller('PageCtrl', ['$scope', '$http', function($scope, $http) {
+
+        $scope.joinus = function() {
+
+            var postData = {
+                name: $scope.user.name,
+                phone: $scope.user.phone,
+                mail:$scope.user.mail
+
+            };
+            $http.post('http://121.40.113.6/api/Regcourse', postData).success(
+                function(data, status, headers) {
+                    alert('success');
+                }).error(function(data, status, headers) {
+                alert("WTF");
+            });
+
+        }
+
+
+    }]);
+    </script>
 </head>
 
 <body>
@@ -127,41 +153,41 @@
                         <h2><a href="joinus.html" class="active">加入我们</a></h2></li>
                 </ul>
             </div>
-            <div class="contentarea">
+            <form ng-app="myApp" ng-controller="PageCtrl" class="contentarea">
                 <br/>
                 <div class="row">
                     <span class="col-sm-1 col-md-1 col-lg-1">
                     姓名：</span>
-                    <input type="text" class="col-sm-4 col-md-4 col-lg-4">
+                    <input ng-model="user.name" type="text" class="col-sm-4 col-md-4 col-lg-4">
                 </div>
                 <div class="row">
                     <span class="col-sm-1 col-md-1 col-lg-1">
                     手机：</span>
-                    <input type="text" class="col-sm-4 col-md-4 col-lg-4">
+                    <input ng-model="user.phone" type="text" class="col-sm-4 col-md-4 col-lg-4">
                 </div>
                 <div class="row">
                     <span class="col-sm-1 col-md-1 col-lg-1">
                     邮箱：</span>
-                    <input type="text" class="col-sm-4 col-md-4 col-lg-4">
+                    <input ng-model="user.mail" type="text" class="col-sm-4 col-md-4 col-lg-4">
                 </div>
                 <div class="row">
                     <span class="col-sm-1 col-md-1 col-lg-1">
                     QQ：</span>
-                    <input type="text" class="col-sm-4 col-md-4 col-lg-4">
+                    <input ng-model="user.qq" type="text" class="col-sm-4 col-md-4 col-lg-4">
                 </div>
                 <div class="row">
                     <span class="col-sm-1 col-md-1 col-lg-1">
                     居住城市：</span>
-                    <input type="text" class="col-sm-4 col-md-4 col-lg-4">
+                    <input ng-model="user.city" type="text" class="col-sm-4 col-md-4 col-lg-4">
                 </div>
                 <div class="row">
                     <span class="col-sm-1 col-md-1 col-lg-1">
                     个人简历：</span>
                     <!-- <input type="textarea" rows="4"> -->
-                    <textarea cols="90" rows="4" class="col-sm-5 col-md-5 col-lg-5" placeholder="请填写个人工作经验及简历"></textarea>
+                    <textarea ng-model="user.cv" cols="90" rows="4" class="col-sm-5 col-md-5 col-lg-5" placeholder="请填写个人工作经验及简历"></textarea>
                 </div>
-                <button class='btn-danger joinbtn col-sm-offset-1 col-md-offset-1 col-lg-offset-1'>加入</button>
-            </div>
+                <button class='btn-danger joinbtn col-sm-offset-1 col-md-offset-1 col-lg-offset-1' ng-click="joinus()">加入</button>
+            </form>
         </div>
         <div class="row footer">
             <div class="footarea1"></div>
