--- a/joinus.html
+++ b/joinus.html
@@ -98,6 +98,7 @@
         $scope.joinus = function() {
 
             var postData = {
+                courseid: 'test',
                 name: $scope.user.name,
                 phone: $scope.user.phone,
                 mail:$scope.user.mail
