--- a/joinus.html
+++ b/joinus.html
@@ -101,7 +101,7 @@
                 courseid: 'test',
                 name: $scope.user.name,
                 phone: $scope.user.phone,
-                mail:$scope.user.mail
+                email:$scope.user.mail
 
             };
             $http.post('http://121.40.113.6/api/Regcourse', postData).success(
