--- a/joinus.html
+++ b/joinus.html
@@ -104,7 +104,7 @@
                 email:$scope.user.mail
 
             };
-            $http.post('http://121.40.113.6/api/Regcourse', postData).success(
+            $http.post('http://121.40.113.6/api/RegCourse', postData).success(
                 function(data, status, headers) {
                     alert('success');
                 }).error(function(data, status, headers) {
