--- a/joinus.html
+++ b/joinus.html
@@ -101,13 +101,21 @@
                 courseid: 'test',
                 name: $scope.user.name,
                 phone: $scope.user.phone,
-                email:$scope.user.mail
+                email: $scope.user.mail
 
             };
-            $http.post('http://121.40.113.6/api/RegCourse', postData).success(
-                function(data, status, headers) {
+            var config = {
+                params: {
+                    courseid: 'test',
+                    name: $scope.user.name,
+                    phone: $scope.user.phone,
+                    email: $scope.user.mail
+                }
+            };
+            $http.post('http://121.40.113.6/api/RegCourse', postData, config).success(
+                function(data, status, headers, config) {
                     alert('success');
-                }).error(function(data, status, headers) {
+                }).error(function(data, status, headers, config) {
                 alert("WTF");
             });
 
