--- a/joinus.html
+++ b/joinus.html
@@ -88,20 +88,28 @@
         width: 18%;
         font-size: 1.4em
     }
+    #notifymsg{
+        font-size: 1.1em;
+        color: red;
+        margin-left: 1%;
+    }
     </style>
     <script>
     var app = angular.module('myApp', ['ui.bootstrap']);
 
 
     app.controller('PageCtrl', ['$scope', '$http', function($scope, $http) {
+        $scope.dispmsg = false;
 
         $scope.joinus = function() {
 
             var postData = {
-                courseid: 'L001',
-                name: $scope.user.name,
-                phone: $scope.user.phone,
-                email: $scope.user.mail
+                username: $scope.user.name,
+                usermobile: $scope.user.phone,
+                useremail: $scope.user.mail,
+                userqq: $scope.user.qq,
+                usercity: $scope.user.city,
+                userintro: $scope.user.intro
 
             };
             var config = {
@@ -112,8 +120,11 @@
                 }
             };
 
-            $.post('http://121.40.113.6/api/RegCourse', postData, function() {
-                alert('success');
+            $.post('http://121.40.113.6/api/JoinUs', postData, function() {
+                //alert('success');
+                // $scope.notifymsg
+                $scope.dispmsg= true;
+
             })
 
             // $.post('http://121.40.113.6/api/RegCourse', postData).success(
@@ -197,9 +208,10 @@
                     <span class="col-sm-1 col-md-1 col-lg-1">
                     个人简历：</span>
                     <!-- <input type="textarea" rows="4"> -->
-                    <textarea ng-model="user.cv" cols="90" rows="4" class="col-sm-5 col-md-5 col-lg-5" placeholder="请填写个人工作经验及简历"></textarea>
+                    <textarea ng-model="user.intro" cols="90" rows="4" class="col-sm-5 col-md-5 col-lg-5" placeholder="请填写个人工作经验及简历"></textarea>
                 </div>
-                <button class='btn-danger joinbtn col-sm-offset-1 col-md-offset-1 col-lg-offset-1' ng-click="joinus()">加入</button>
+                <button class='btn-danger joinbtn col-sm-offset-1 col-md-offset-1 col-lg-offset-1' ng-click="joinus()" ng-disabled="!dispmsg">加入</button>
+                <span id="notifymsg" ng-show="dispmsg">欢迎加入我们，工作人员会尽快联系您！</span>
             </form>
         </div>
         <div class="row footer">
