msg disable button

--- a/joinus.html
+++ b/joinus.html
@@ -88,6 +88,9 @@
         width: 18%;
         font-size: 1.4em
     }
+    .joinbtn:disabled,.joinbtn:disabled:hover{
+        background-color: grey;
+    }
     #notifymsg{
         font-size: 1.1em;
         color: red;
