--- a/joinus.html
+++ b/joinus.html
@@ -128,14 +128,8 @@
                 // $scope.notifymsg
                 $scope.dispmsg= true;
 
-            })
-
-            // $.post('http://121.40.113.6/api/RegCourse', postData).success(
-            //     function(data, status, headers) {
-            //         alert('success');
-            //     }).error(function(data, status, headers) {
-            //     alert("WTF");
-            // });
+            })；
+            $scope.$apply();
 
         }
 
