--- a/courses.html
+++ b/courses.html
@@ -132,8 +132,8 @@
                 <li><a href="aboutus.html">加入我们</a></li>
         </nav>
     </div>
-    <div class="row page" ng-app="myApp">
-        <div ng-controller="PageCtrl">
+    <div class="row page" ng-app="myApp" ng-controller="PageCtrl">
+        <div >
             <img class="img-responsive" src="img/courseimg.png" alt="">
             <h2 class="coursename"><span>课程名称：</span><span>客户体验设计</span></h2>
             <h2><span>课程讲师：</span><span>客户体验设计</span></h2>
