change css styles

--- a/courses.html
+++ b/courses.html
@@ -52,6 +52,7 @@
         width: 100%;
         margin: 0 auto;
         background: white;
+        padding-bottom: 3%;
         float: right;
         border: 1px solid #DBDBDB;
     }
@@ -83,6 +84,7 @@
         font-size: 1.1em;
         color: red;
         margin-left: 1%;
+        text-align: center;
     }
     </style>
     <script>
