--- a/courses.html
+++ b/courses.html
@@ -85,6 +85,7 @@
         color: red;
         margin-left: 1%;
         text-align: center;
+        padding-left: 1%;
     }
     </style>
     <script>
@@ -169,7 +170,7 @@
                 <input ng-model="user.email" type="text" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
             </div>
             <button class='btn-danger joinbtn col-xs-offset-5 col-sm-offset-5 col-md-offset-5 col-lg-offset-5' ng-click="joinus()" ng-disabled="dispmsg">立即报名</button>
-            <p id="notifymsg" ng-show="dispmsg"> 工作人员会与您取得联系</p>
+            <p id="notifymsg" ng-show="dispmsg">欢迎报名，工作人员会尽快联系您！</p>
         </div>
     </div>
     <div class="row footer">
