--- a/courses.html
+++ b/courses.html
@@ -6,14 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CaiBird</title>
-    <script type="text/javascript" language="JavaScript" src="js/jquery-1.9.1.js">
-    </script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/indexcss.css">
-    <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" language="JavaScript" src="js/indexjs.js"></script>
-    <script src="js/angular.min.js"></script>
-    <script src="js/ui-bootstrap-tpls-0.10.0.js" type="text/javascript"></script>
     <style type="text/css">
     .active {
         color: red;
@@ -79,7 +73,7 @@
         width: 18%;
         font-size: 1.3em
     }
-
+    
     #notifymsg {
         font-size: 1.1em;
         color: red;
@@ -88,40 +82,6 @@
         padding-left: 1%;
     }
     </style>
-    <script>
-    var app = angular.module('myApp', ['ui.bootstrap']);
-
-    app.controller('PageCtrl', ['$scope', '$http', function($scope, $http) {
-        $scope.dispmsg = false;
-
-        $scope.joinus = function() {
-
-            var postData = {
-                username: $scope.user.name,
-                userphone: $scope.user.phone,
-                useremail: $scope.user.mail,
-
-            };
-            var config = {
-                params: {
-                    headers: {
-                        'Content-Type': 'application/x-www-form-urlencoded; charset=UTF-8'
-                    },
-                }
-            };
-
-            $.post('http://121.40.113.6/api/JoinUs', postData, function() {
-                //alert('success');
-                // $scope.notifymsg
-                $scope.dispmsg = true;
-                $scope.$apply();
-
-            });
-        }
-
-
-    }]);
-    </script>
 </head>
 
 <body>
@@ -190,6 +150,13 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" language="JavaScript" src="js/jquery-1.9.1.js">
+    </script>
+    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" language="JavaScript" src="js/indexjs.js"></script>
+    <script src="js/angular.min.js"></script>
+    <script src="js/ui-bootstrap-tpls-0.10.0.js" type="text/javascript"></script>
+        <script src="controller/courseCtrl.js" type="text/javascript"></script>
 </body>
 
 </html>
